--- a/css/style.css
+++ b/css/style.css
@@ -115,8 +115,18 @@ body {
   z-index: 1;
   border-radius: 50%;
   border: solid 3px #6f0000;
+  z-index: 0;
 }
-
+.aboutPortraits {
+  width: 250px;
+  height: 250px;
+  background-image: url("../img/Aboutportrait.jpg");
+  position: relative;
+  z-index: 1;
+  border-radius: 50%;
+  border: solid 3px #6f0000;
+  z-index: 0;
+}
 .menu .nav-item {
   -webkit-transform: translate3d(600px, 0, 0);
   transform: translate3d(600px, 0, 0);
@@ -246,7 +256,6 @@ main .icons a {
   grid-area: bioimage;
   margin: auto;
   border-radius: 50%;
-  border: #ffefba 3px solid;
 }
 
 .about-info .bio {
@@ -278,7 +287,7 @@ main .icons a {
 .about-info .job {
   background: #ffefba;
   padding: 0.5rem;
-  border-bottom: #ffefba 5px solid;
+  /* border-bottom: #ffefba 5px solid; */
 }
 
 .boxes {
@@ -298,7 +307,7 @@ main .icons a {
 
 .boxes div {
   font-size: 1.5rem;
-  border: 2px #fff solid;
+  border: 2px #6f0000 solid;
   padding: 1.3rem 2rem;
   margin-bottom: 3rem;
   -webkit-transition: all 0.5s ease-out;
@@ -307,7 +316,7 @@ main .icons a {
 
 .boxes div:hover {
   padding: 0.5rem 1.5rem;
-  background: #ffefba;
+  background: #6f0000;
   color: #000;
 }
 
@@ -373,9 +382,24 @@ main .icons a {
   /* z-index: -1; */
   width: 100%;
   height: 100%;
-  /* background-color: #b6192450; */
-  /* background-image: url("");
-  background-repeat: no-repeat; */
-  /* background-size: cover; */
-  /* background-position: 50% 50%; */
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #220101;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #6f0000;
+  border-radius: 10px;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ffefba;
 }
